// syntax = "proto3";

// package Inventory;

// option go_package = ".;";

// service InventoryService {
//     rpc AddInventory(AddInventoryRequest) returns (AddInventoryResponse);
// }

// message AddInventoryRequest {
//     string product_name = 1;
//     double price = 2;
// }

// message AddInventoryResponse {
//     bool success = 1;
//     string message = 2;
// }

syntax = "proto3";

package Inventory;

option go_package = ".;";

message SellerProduct {
  string stockCode = 1;
  string name = 2;
  int32 quantity = 3;
  float price = 4;
}

service InventoryService {
    rpc AddInventory(AddInventoryRequest) returns (AddInventoryResponse);
}

message AddInventoryRequest {
    SellerProduct seller_product = 1;
}

message AddInventoryResponse {
    bool success = 1;
    string message = 2;
}
